src/test/deca/syntax/parser/valid/test/test_pars_val_instruction_vide.deca
// Description:
//    Programme minimaliste testant l'arbre d'affectation de l'instruction println.
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023


{
    ;
}