src/test/deca/syntax/parser/invalid/test/test_pars_inv_instruction_primary_parenthese_non_ferme.deca
// Description:
//    tests de programme incorrect syntaxiquement pour le if
//
// Resultats:
//    Ligne 13 : Erreur (oubli ")")
//    
//
// Historique:
//    cree le 04/01/2023

{
    (iden;
}
